--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/scm
 spring.datasource.username=root
 spring.datasource.password=password
 
+# Jpa configuration
+spring.jpa.show-sql=true
+# for creating Schema and tables
+spring.jpa.hibernate.ddl-auto=update
+
+
 # email configuration
