--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,15 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# Node Modules (If using React, Vue, or Frontend)
+node_modules/
+npm-debug.log
+yarn.lock
+package-lock.json
+
+
+# Environment Variables
+.env
+.env.local
+.env.*.local
