--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,12 @@ spring.datasource.username=root
 spring.datasource.password=password
 
 # Jpa configuration
-spring.jpa.show-sql=true
 # for creating Schema and tables
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.orm.jdbc.bind=trace
 
 
 # email configuration
